[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavelet_texture_segmentation"
version = "0.0.1"
authors = [
  { name="Arthur Huys", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "PyWavelets",
  "scikit-image",
  "scipy",
  "opencv-python"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"